@@ -29,7 +29,6 @@ import java.io.StringReader;
 import java.lang.invoke.MethodHandles;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Iterator;
 import java.util.LinkedHashMap;
 import java.util.List;
@@ -43,6 +42,7 @@ import org.apache.solr.common.SolrInputField;
 import org.apache.solr.common.params.CommonParams;
 import org.apache.solr.common.params.SolrParams;
 import org.apache.solr.common.params.UpdateParams;
+import org.apache.solr.common.util.CollectionUtil;
 import org.apache.solr.common.util.ContentStream;
 import org.apache.solr.common.util.JsonRecordReader;
 import org.apache.solr.common.util.StrUtils;
@@ -50,6 +50,7 @@ import org.apache.solr.handler.RequestHandlerUtils;
 import org.apache.solr.handler.UpdateRequestHandler;
 import org.apache.solr.request.SolrQueryRequest;
 import org.apache.solr.response.SolrQueryResponse;
+import org.apache.solr.schema.IndexSchema;
 import org.apache.solr.schema.SchemaField;
 import org.apache.solr.update.AddUpdateCommand;
 import org.apache.solr.update.CommitUpdateCommand;
@@ -657,21 +658,31 @@ public class JsonLoader extends ContentStreamLoader {
       // Is this a child doc (true) or a partial update (false)
       if (isChildDoc(extendedSolrDocument)) {
         return extendedSolrDocument;
-      } else { // partial update
-        assert extendedSolrDocument.size() == 1;
-        final SolrInputField pair = extendedSolrDocument.iterator().next();
-        return Collections.singletonMap(pair.getName(), pair.getValue());
+      } else { // partial update: can include multiple modifiers (e.g. 'add', 'remove')
+        Map<String, Object> map = CollectionUtil.newLinkedHashMap(extendedSolrDocument.size());
+        for (SolrInputField inputField : extendedSolrDocument) {
+          map.put(inputField.getName(), inputField.getValue());
+        }
+        return map;
       }
     }
 
     /** Is this a child doc (true) or a partial update (false)? */
     private boolean isChildDoc(SolrInputDocument extendedFieldValue) {
-      if (extendedFieldValue.size() != 1) {
+      IndexSchema schema = req.getSchema();
+      // If schema doesn't support child docs, return false immediately, which
+      // allows people to do atomic updates with multiple modifiers (like 'add'
+      // and 'remove' for a single doc) and to do single-modifier updates for a
+      // field with a name like 'set' that is defined in the schema, both of
+      // which would otherwise fail.
+      if (!schema.isUsableForChildDocs()) {
+        return false;
+      } else if (extendedFieldValue.size() != 1) {
         return true;
       }
       // if the only key is a field in the schema, assume it's a child doc
       final String fieldName = extendedFieldValue.iterator().next().getName();
-      return req.getSchema().getFieldOrNull(fieldName) != null;
+      return schema.getFieldOrNull(fieldName) != null;
       // otherwise, assume it's "set" or some other verb for a partial update.
       // NOTE: it's fundamentally ambiguous with JSON; this is a best effort try.
     }
