@@ -1,0 +1,32 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<!--
+ Licensed to the Apache Software Foundation (ASF) under one or more
+ contributor license agreements.  See the NOTICE file distributed with
+ this work for additional information regarding copyright ownership.
+ The ASF licenses this file to You under the Apache License, Version 2.0
+ (the "License"); you may not use this file except in compliance with
+ the License.  You may obtain a copy of the License at
+
+     http://www.apache.org/licenses/LICENSE-2.0
+
+ Unless required by applicable law or agreed to in writing, software
+ distributed under the License is distributed on an "AS IS" BASIS,
+ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ See the License for the specific language governing permissions and
+ limitations under the License.
+-->
+<schema name="id-version-and-multivalued-name-field" version="1.1">
+  <fieldType name="string" class="solr.StrField" sortMissingLast="true" omitNorms="true"/>
+  <field name="id" type="string" indexed="true" stored="true"/>
+  <field name="_version_" type="string" indexed="true" stored="true"/>
+  <field name="name" type="string" indexed="true" stored="true" multiValued="true"/>
+    <!-- two fields (one multivalued, one not) for verifying correct behavior when
+         an atomic update modifier is used as a field name. -->
+  <field name="set" type="string" indexed="true" stored="true"/>
+  <field name="add" type="string" indexed="true" stored="true" multiValued="true"/>
+  <!-- If the following is uncommented, then the schema will support
+    nested docs, and all but one of the tests in AtomicUpdatesJsonTest.java
+    will fail. -->
+  <!-- <field name="_root_" type="string" indexed="true" stored="true"/> -->
+  <uniqueKey>id</uniqueKey>
+</schema>
